[tool.poetry]
name = "openshift-ai-sdk"
version = "0.1.0"
description = "A Python SDK for managing OpenShift AI projects"
authors = ["Eder Ignatowicz <ignatowicz@gmail.com>"]
readme = "README.md"
license = "Apache"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
